[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Actors/Enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 31.0
height = 0.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Vision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Vision"]
polygon = PoolVector2Array( 0, 0, 200, -100, 200, 100 )

[node name="Polygon2D" type="Polygon2D" parent="Vision"]
color = Color( 0.568627, 1, 0, 0.345098 )
polygon = PoolVector2Array( 0, 0, 200, -100, 200, 100 )

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2( 40, 0 )
enabled = true

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="SearchTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="BulletSpawnPosition" type="Position2D" parent="."]
position = Vector2( 40, 0 )

[connection signal="area_entered" from="Vision" to="." method="_on_Vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_Vision_area_exited"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="SearchTimer" to="." method="_on_SearchTimer_timeout"]
